--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ panic = "abort"
 opt-level = 3
 
 [dependencies]
-rusty_ytdl = "0.6.3"
+reqwest = "0.11.23"
+rusty_ytdl = "0.6.6"
 sanitize-filename = "0.5.0"
-tokio = { version = "1.31.0", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
 
 [package.metadata.scripts]
 run_debug = "cargo run dev"
